[fix]#14502 adjust domino title icon size and text alignement

--- a/modules/_dominos.scss
+++ b/modules/_dominos.scss
@@ -84,8 +84,9 @@
 				width: auto;
 
 				.title-icon i{
-					font-size: 18px;
+					font-size: 21px;
     				padding-right: 5px;
+					float: left;
 				}
 			}
 		}
